--- a/styles.css
+++ b/styles.css
@@ -1175,8 +1175,10 @@ body#page-course-view-remuiformat .remui-format-list .card-footer ul.section .ac
   display: none;
 }
 
-body#page-course-view-remuiformat .remui-format-list .activities-list ul.section .activity .activity-item > *:not(.activity-basis):not(.editing_move),
-body#page-course-view-remuiformat .remui-format-list .card-footer ul.section .activity .activity-item > *:not(.activity-basis):not(.editing_move) {
+body#page-course-view-remuiformat .remui-format-list .activities-list ul.section .activity .activity-item:not(:has(.activity-grid)) > *:not(.activity-basis):not(.editing_move),
+body#page-course-view-remuiformat .remui-format-list .activities-list ul.section .activity .activity-item .activity-grid > *:not(.activity-instance):not(.activity-actions),
+body#page-course-view-remuiformat .remui-format-list .card-footer ul.section .activity .activity-item:not(:has(.activity-grid)) > *:not(.activity-basis):not(.editing_move),
+body#page-course-view-remuiformat .remui-format-list .card-footer ul.section .activity .activity-item .activity-grid > *:not(.activity-instance):not(.activity-actions) {
   margin-left: 74px;
 }
 
